<resources>
    <string name="app_name">Dropbox Folder Gallery</string>
    <string name="contentDescription">content description</string>
    <string name="dbx_api_app_key">4sn6e2y4h18bvn9</string>
    <string name="client_identifier">FolderGallery/0.0.0</string>
    <string name="everywhare">Everywhere</string>
    <string name="nosubfoldershere">No sub-folders here. Go back and try again.</string>
    <string name="stop">stop</string>
    <string name="blank">blank</string>
    <string name="welcome">Welcome\n\nDropbox Folder Gallery quickly and efficiently shows the images in a selected folder and its sub-folders in your online Dropbox storage. This application will use large amounts of mobile data - best to use wifi. \n\nDropbox Folder Gallery application is not affiliated with Dropbox in any way.</string>
    <string name="permissons">\nPermissions\n\nOn first run you will be prompted to login to your Dropbox account using a browser. Then when prompted again please grant permission for the Dropbox FolderGallery profile to have read access your Dropbox folders and files. Read only access is needed to safely navigate your Dropbox folders and files.\n\nNo special Android permissions are required for Android 10 and newer to download original images. For older Android versions photos, media and file access is needed to add downloaded images to the device.\n\nThere is a bug in Android 6 reporting Overlay Permissions found - just keep re-trying until the file permission works without the overlay message. Another Android 7 bug means use an alternative viewer. eg your device Gallery or Downloads application.</string>
    <string name="navigation">\nNavigation\n\nThe folders screen lists the folders in your dropbox top level. The Play button beside the folder name starts the display of image thumbnails below that folder. Click on a folder name to reveal its sub-folders. If a fast forward button appears please click to load more folders.\n\nThe spanner icon selects administration tools. Here you can delete cache files, reset the introduction page, manage your billing options and disconnect your dropbox.\n\nThe Gallery screen downloads small thumbnails in batches. Thumbnails can be sorted by file time, folder name, and file names. File names are truncated to 10 characters which is enough to distiguish a standard day date of format yyyy-mm-dd. Scroll the thumbnails up or down to see all the images.\n\nClick on a image to download the full version into the gallery storage. The image is actually placed in a special gallery album called "Dropbox Folder Gallery". Long click a thumbnail to check the image details in your dropbox storage.</string>
    <string name="dont_show_next_time">Do not show next time?</string>
    <string name="title_activity_disclaimer">DisclaimerActivity</string>
    <string name="disclaimer_text">Terms\n\n
        Please ensure that before using this application that you expressly understand and agree that your use of this application is at your sole risk and that the application is provided “as is” and “as available” without warranty of any kind, to the maximum extent permitted by applicable law.\n\n
        Once the applicable is available to you through your google account, you should check the application as soon as reasonably possible to ensure that it functions and performs as stated, and notify us or Provider as soon as reasonably possible if you find any errors or defect.</string>
    <string name="disclaimer_accept">I accept these terms.</string>
    <string name="clear_cache_files_text">Check to clean temporary files. Note that downloaded images will not be removed from your device gallery</string>
    <string name="disconnect_dropbox_text">Check to disconnect Dropbox Folder Gallery connection to your dropbox. Restart Dropbox Folder Gallery to login and reconnect or choose another dropbox</string>
    <string name="display_introduction_text">Hide (checked) or Show (unchecked) introduction page at next start.</string>
    <string name="billing_text">Review and control billing options.</string>
    <string name="administration_options">Administration Options</string>
    <string name="into_donate_text">Please make a financial gift of your choice to support my software projects. See menu options top right - help feed the cat.</string>
    <string name="invalid">invalid</string>
</resources>